<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:id="@+id/passchanged"
    tools:context=".ChangePasswordActivity">

    <com.google.android.material.appbar.AppBarLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar_changePass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray2"
            app:title="Change Password"
            app:titleTextColor="@color/black"
            app:titleTextAppearance="@style/TextAppearance.App.Subtitle1"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:navigationIconTint="@color/black"
            style="@style/Widget.App.Toolbar"/>
    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/OldPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/light_grey"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxBackgroundColor="#00000000"
            android:hint="Old Password"
            app:startIconContentDescription="Password"
            app:endIconMode="password_toggle"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/oldpw"
                android:fontFamily="@font/basic_regular"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/light_grey"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxBackgroundColor="#00000000"
            android:hint="New Password"
            app:startIconContentDescription="Password"
            app:endIconMode="password_toggle"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/newpass"
                android:fontFamily="@font/basic_regular"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/NewPassConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/light_grey"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxBackgroundColor="#00000000"
            android:hint="Confirm Password"
            app:startIconContentDescription="Password"
            app:endIconMode="password_toggle"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/confirmpass"
                android:fontFamily="@font/basic_regular"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:layout_width="wrap_content"
            android:letterSpacing="0"
            android:layout_height="30dp"
            android:text="Forgot Password?"
            android:textColor="@color/blue"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:padding="0dp"
            android:textSize="12dp"
            android:fontFamily="@font/basic_regular"
            android:onClick="forgotpass_changepass"/>
        <Button
            android:id="@+id/btn_ConfirmChangePass"
            android:layout_gravity="center"
            style="@style/Widget.App.Button"
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            android:text="Change Password"/>
    </LinearLayout>
</LinearLayout>