<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FilterActivity"
    android:orientation="vertical">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar_filter"
            style="@style/Widget.App.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray2"
            app:menu="@menu/menu_appbar_filter"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:navigationIconTint="@color/black"
            app:subtitleTextColor="@color/black"
            app:title="Filter"
            app:titleTextAppearance="@style/TextAppearance.App.Subtitle1"
            app:titleTextColor="@color/black" />
    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/textSpec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/basic_regular"
        android:text="Specializations"
        android:textColor="@color/black"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/spec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/basic_regular"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:layout_marginLeft="10dp"
        />
    </LinearLayout>
        <Spinner
            android:id="@+id/spinnerSpecial"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:layout_marginTop="10dp"
            />
    <TextView
        android:id="@+id/textSalary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/basic_regular"
        android:text="Salary"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/basic_regular"
        android:text="Rp. 0 "
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginTop="10dp"/>
    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="358dp"
        android:layout_height="25dp"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/textLoca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/basic_regular"
        android:text="Location"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginTop="20dp"/>
    <Button
        android:id="@+id/buttonLoca"
        android:layout_width="359dp"
        android:layout_height="58dp"
        android:fontFamily="@font/basic_regular"
        android:text="Select Locations"
        android:textColor="#ACA2A2"
        app:backgroundTint="@color/white"
        app:icon="@drawable/lokasi"
        app:iconTint="@color/dark_gray"
        android:layout_marginTop="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
    <TextView
        android:id="@+id/textSorted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/basic_regular"
        android:text="Sorted By"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginTop="20dp"/>

        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <Button
            android:id="@+id/buttonNtF"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:onClick="NearToFar"
            app:backgroundTint="@color/yellow"
            app:icon="@drawable/ic_location_only_white"
            app:iconTint="@color/black"/>
        <Button
            android:id="@+id/buttonCost"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:fontFamily="@font/basic_regular"
            android:onClick="cost"
            android:text="$"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:backgroundTint="@color/white"/>
        <Button
            android:id="@+id/buttonAss"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:fontFamily="@font/basic_regular"
            android:onClick="Ascending"
            android:text="A-Z"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:backgroundTint="@color/white"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textView26"
        android:layout_width="138dp"
        android:layout_height="19dp"
        android:fontFamily="@font/basic_regular"

        android:textColor="#99000000"
        android:textSize="12sp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            >
            <Button
                android:id="@+id/buttonApply"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/border2"
                android:fontFamily="@font/basic_regular"
                android:text="Apply"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                app:backgroundTint="@color/dark_blue"
                android:layout_gravity="bottom"/>
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>