...
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManageProfilActivity"
    android:id="@+id/manageprofileact"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
...
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@color/white"
                    android:contentDescription="TODO"
                    android:src="@drawable/profile" />
                <ImageButton
                    android:id="@+id/camera"
                    android:layout_width="31dp"
                    android:layout_height="44dp"
                    android:src="@drawable/icons8_camera_24"
                    android:layout_marginLeft="330dp"/>
                <ImageButton
                    android:id="@+id/imagePencil3"
                    android:layout_width="31dp"
                    android:layout_height="44dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:background="@color/white"
...
