...
                    android:text="Darwin Chandra"
                    android:padding="5dp"
                    android:textSize="22dp"
                    android:fontFamily="@font/basic_regular"
                    android:textColor="@color/black"/>
                <Button
                    android:id="@+id/btn_manage_profil"
                    android:layout_width="wrap_content"
                    android:letterSpacing="0"
                    android:layout_height="wrap_content"
                    android:text="Manage Your Profile"
                    android:textColor="@color/blue"
                    android:background="@android:color/transparent"
...
