<resources>
    <string name="app_name">JUDES_DarwinChandra</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="profile_listview">
        <item>Setting</item>
        <item>Bookmark</item>
        <item>Help</item>
    </string-array>

    <string name="text_enter_name"></string>

    <string-array name="label_array">
        <item>Accounting</item>
        <item>Desain Grafis</item>
        <item>Front End</item>
        <item>Back End</item>
        <item>IT Support</item>
        <item>Teknisi</item>
    </string-array>
    <string name="nothing_entered">Nothing entered.</string>
    <string name="nothing_selected">"onNothingSelected: "</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>